# RubiksCube2

./: .gitignore  CMakeLists.txt  DebugAll.props  Debug_GoogleBenchmark.props  README.md  ReleaseAll.props  Release_GoogleBenchmark.props  RubiksCube.sln
App1/: App1.vcxproj  App1.vcxproj.filters  main.cpp
BuildTables/: BuildTables.vcxproj  main.cpp
Cube/: CMakeLists.txt  Cube.vcxproj  Cube.vcxproj.filters  bit.h  byte.cpp  byte.h  corners.cpp  corners.h  cube.h  cube2x2.h  cube3x3.cpp  cube3x3.h  cube4x4.cpp  cube4x4.h  cube5x5.cpp  cube5x5.h  cube_of_distance.h  cubies.h  edges_center.cpp  edges_center.h  edges_side.cpp  edges_side.h  faces_center.cpp  faces_center.h  faces_side.cpp  faces_side.h  intrin.h  join.h  random.h  subset.cpp  subset.h  twist.cpp  twist.h
CubeBenchmark/: CMakeLists.txt  CubeBenchmark.vcxproj  main.cpp
CubeTest/: CMakeLists.txt  CubeTest.vcxproj  bit.cpp  byte.cpp  corners.cpp  cube.cpp  cube2x2.cpp  cube3x3.cpp  cube4x4.cpp  cube5x5.cpp  edges_center.cpp  edges_side.cpp  faces_center.cpp  faces_side.cpp  pch.h  random.cpp  subset.cpp  twist.cpp
Cubie/: Cubie.vcxproj  Cubie.vcxproj.filters  corners.cpp  corners.h  cube3x3.cpp  cube3x3.h  cubie.h  edges_center.cpp  edges_center.h  random.h  subset.cpp  subset.h  twist.cpp  twist.h  twister.h
CubieBenchmark/: CubieBenchmark.vcxproj  main.cpp
CubieTest/: CubieTest.vcxproj  corners.cpp  cube3x3.cpp  edges_center.cpp  pch.h  random.cpp  subset.cpp  twist.cpp
Cubies/: Cubies.vcxproj  Cubies.vcxproj.filters
CubiesTest/: CubiesTest.vcxproj  corners.cpp  faces_side.cpp  pch.h  random.cpp
Math/: CMakeLists.txt  Math.vcxproj  Math.vcxproj.filters  binomial.cpp  binomial.h  graph.h  hash.h  math.h  numeric.h  permutation.cpp  permutation.h  statistic.h
MathBenchmark/: MathBenchmark.vcxproj  main.cpp
MathTest/: CMakeLists.txt  MathTest.vcxproj  binomial.cpp  graph.cpp  hash.cpp  pch.h  permutation.cpp  statistic.cpp
SolverCube2x2/: SolverCube2x2.vcxproj  main.cpp
SolverCube3x3/: SolverCube3x3.vcxproj  main.cpp
Solvers/: CMakeLists.txt  Solvers.vcxproj  Solvers.vcxproj.filters  brute_force.cpp  brute_force.h  close_solution.h  close_solution_3x3.cpp  close_solution_3x3.h  corners.cpp  corners.h  distance.cpp  distance.h  hash_table.h  neighbours.h  one_phase.cpp  one_phase.h  solvers.h  tables.cpp  tables.h  transposition_table.h  two_phase.cpp  two_phase.h
SolversBenchmark/: CMakeLists.txt  SolversBenchmark.vcxproj  irreducible.3x3  main.cpp
SolversTest/: CMakeLists.txt  SolversTest.vcxproj  close_solution.cpp  close_solution_3x3.cpp  corners.cpp  hash_table.cpp  nTwists.cpp  neighbours.cpp  one_phase.cpp  pch.h  tables.cpp  transposition_table.cpp
Std/: Std.vcxproj  Std.vcxproj.filters  bit.cpp  bit.h  chrono.cpp  chrono.h  hash_table.h  inplace_vector.h  intrin.h  join.h  mutexed_access.h  numeric.h  std.h
StdTest/: StdTest.vcxproj  bit.cpp  chrono.cpp  hash.cpp  hash_table.cpp  join.cpp  mutexed_access.cpp  numeric.cpp  pch.h
Tables/: Tables.vcxproj  Tables.vcxproj.filters  corners.cpp  corners.h  edges_center.cpp  edges_center.h  (+3 more)
(+2 files in other folders)
